v9 product page finalized

--- a/app/product_page.html
+++ b/app/product_page.html
@@ -56,7 +56,7 @@
 
 	<div class="body_wrapper">
 
-		<div class="head_wrapper_innerpage">
+		<div class="head_wrapper_pp">
 
 			<header>
 				<div class="container">
@@ -104,133 +104,124 @@
 				</div>
 			</header>
 
-			<div class="head_content_wrapper_with_p">
+			<div class="container">
 
-				<h1 class="header_title">Каталог</h1>
+				<div class="pp_image_block col-md-6">
 
-				<p class="disc_head_content">
-					Все изделия изготавливаются из натурального дерева из дуба, ясеня или сосны под заказ
-				</p>
+					<img src="../img/gallery/g_big.jpg" alt="" class="pp_image_big"/>
+
+					<div class="pp_image_small">
+						<img src="../img/gallery/g_small_1.jpg" alt="" class="pp_image_small_selected"/>
+						<img src="../img/gallery/g_small_2.jpg" alt="" />
+						<img src="../img/gallery/g_small_3.jpg" alt="" />
+					</div>
+
+				</div>
+
+				<div class="head_content_wrapper_pp col-md-6">
+
+					<h1 class="header_product_title">Двери 1</h1>
+
+					<p class="disc_head_content_pp">
+						Сосна - от 4000 грн./1 шт<br>Ясень - от 6000 грн./1 шт</p>
+
+				</div>
 
 			</div>
+
 		</div>
 
-		<div class="tabs_catalog_scroll">
-			<div class="tabs_catalog">
+		<div class="content_pp_wrapper container">
 
-				<div class="tab_wrapper">
-					<div class="tab tab_selected">
+			<div class="col-md-6">
 
-						<div class="tab_icons_wrapper">
-							<img src="../img/ic_doors.svg" class="tab_icons">
-						</div>
+				<div class="col-md-6 content-pp">
+					<p>
+						В цену входит:<br>
+					- Дверное полотно<br>
+					- Коробка до 100мм<br>
+					- Наличники на две стороны<br>
+					- Покрытие тонировки в любой выбранной цвета, грунтовка + лак<br>
 
-						<div class="tab_content">
+					Отдельно оплачивается:<br>
+					- Доставка: от 1000 грн. *<br>
+					- Установка: 10% от стоимости заказа<br>
+					- Стекло, фурнитура на выбор заказчика<br>
 
-							<h3>Двери</h3>
+					Срок изготовления:<br>
+					- Одна дверь:<br>
+					от 10до 20 рабочих дней<br>
+					- Комплект на квартиру (5-7 дверей):<br>
+					от 30 рабочих дней<br>
 
-							<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
-
-						</div>
-					</div>
+					Характеристика:<br>
+					Дверной блок изготавливается из 100% массива натурального дерева.<br>
+					Заказчик может выбрать породу дерева (ясен, сосна), любую форму филенок  и их оформление (под обклад или без), любую тонировку и покраску. Возможно оформить двери различным карнизом, порталами и елементами декора.
+					</p>
 				</div>
 
-				<div class="tab_wrapper">
-					<div class="tab">
+				<div class="side_features_wrapper col-md-5 col-md-offset-1">
+					<div class="side_features">
 
-						<div class="tab_icons_wrapper">
-							<img src="../img/ic_furniture.svg" class="tab_icons">
+						<div class="feature_item">
+							<img src="../img/ic_delivery.svg" alt="" />
+							<p>Доставка и монтаж изделия</p>
 						</div>
 
-						<div class="tab_content">
-
-							<h3>Мебель</h3>
-
-							<p class="tab_small_desc">Кухни, столы, стулья, кровати, шкафы, стенки</p>
-
+						<div class="feature_item">
+							<img src="../img/ic_old_phone.svg" alt="" />
+							<p>Бесплатные консультации</p>
 						</div>
+
+						<div class="feature_item">
+							<img src="../img/ic_guarantee.svg" alt="" />
+							<p>Гарантия 5 лет</p>
+						</div>
+
+						<div class="feature_item">
+							<img src="../img/ic_wood.svg" alt="" />
+							<p>Только натуральное дерево</p>
+						</div>
+
 					</div>
 				</div>
-
-				<div class="tab_wrapper">
-					<div class="tab">
-
-						<div class="tab_icons_wrapper">
-							<img src="../img/ic_stairs.svg" class="tab_icons">
-						</div>
-
-						<div class="tab_content">
-
-							<h3>Лестницы</h3>
-
-							<p class="tab_small_desc">Сосна - от 4000 грн./1 шт<br>Ясень - от 5500 грн./1 шт</p>
-
-						</div>
-					</div>
-				</div>
-
 			</div>
+
 		</div>
 
-		<section class="catalog_gallery container">
+		<div class="you_also_like_wrapper">
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_1.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
+			<h3>Вам также может понравится</h3>
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_2.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
+			<section class="catalog_gallery">
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
+				<div class="g_img_wrapper">
+					<a href="product_page.html">
+						<img class="g_img" src="../img/gallery/g_small_1.jpg" alt="Двери 1" width="300" height="300">
+					</a>
+					<div class="g_title">Двери 1</div>
+				</div>
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
+				<div class="g_img_wrapper">
+					<a href="product_page.html">
+						<img class="g_img" src="../img/gallery/g_small_2.jpg" alt="Двери 1" width="300" height="300">
+					</a>
+					<div class="g_title">Двери 1</div>
+				</div>
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
+				<div class="g_img_wrapper">
+					<a href="product_page.html">
+						<img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+					</a>
+					<div class="g_title">Двери 1</div>
+				</div>
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
+			</section>
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
 
-		</section>
+		</div>
+
 
 		<footer>
 
