--- a/app/product_page.html
+++ b/app/product_page.html
@@ -104,39 +104,39 @@
 				</div>
 			</header>
 
-			<div class="container">
-
-				<div class="pp_image_block col-md-6">
-
-					<img src="../img/gallery/g_big.jpg" alt="" class="pp_image_big"/>
-
-					<div class="pp_image_small">
-						<img src="../img/gallery/g_small_1.jpg" alt="" class="pp_image_small_selected"/>
-						<img src="../img/gallery/g_small_2.jpg" alt="" />
-						<img src="../img/gallery/g_small_3.jpg" alt="" />
-					</div>
-
-				</div>
-
-				<div class="head_content_wrapper_pp col-md-6">
-
-					<h1 class="header_product_title">Двери 1</h1>
-
-					<p class="disc_head_content_pp">
-						Сосна - от 4000 грн./1 шт<br>Ясень - от 6000 грн./1 шт</p>
-
-				</div>
-
-			</div>
-
 		</div>
 
 		<div class="content_pp_wrapper container">
 
-			<div class="col-md-6">
+			<div class="pp_image_block col-md-6">
 
-				<div class="col-md-6 content-pp">
-					<p>
+				<img src="../img/gallery/g_big.jpg" alt="" class="pp_image_big"/>
+
+				<div class="pp_image_small">
+					<img src="../img/gallery/g_small_2.jpg" alt="" class="pp_image_small_selected"/>
+					<img src="../img/gallery/g_small_1.jpg" alt="" />
+					<img src="../img/gallery/g_small_3.jpg" alt="" />
+					<img src="../img/gallery/g_small_1.jpg" alt="" />
+					<img src="../img/gallery/g_small_3.jpg" alt="" />
+				</div>
+
+			</div>
+
+			<div class="col-md-6 info_wrapper">
+
+				<div class="col-md-6 info">
+
+					<div class="head_content_wrapper_pp">
+
+						<h1 class="header_product_title">Двери 1</h1>
+
+						<p class="price_pp">
+							Сосна - от 4000 грн./1 шт<br>Ясень - от 6000 грн./1 шт
+						</p>
+
+					</div>
+
+					<p class="disc">
 						В цену входит:<br>
 					- Дверное полотно<br>
 					- Коробка до 100мм<br>
@@ -160,7 +160,7 @@
 					</p>
 				</div>
 
-				<div class="side_features_wrapper col-md-5 col-md-offset-1">
+				<div class="col-md-5 col-md-offset-1 side_features_wrapper">
 					<div class="side_features">
 
 						<div class="feature_item">
@@ -185,6 +185,7 @@
 
 					</div>
 				</div>
+
 			</div>
 
 		</div>
@@ -221,7 +222,6 @@
 
 
 		</div>
-
 
 		<footer>
 
