--- a/app/product_page.html
+++ b/app/product_page.html
@@ -76,8 +76,8 @@
 					<nav class="head_nav col-sm-4 col-md-3">
 						<a href="index.html">Главная</a>
 						<a href="catalog.html">Каталог</a>
-						<a href="#">Цены</a>
-						<a href="#">Статьи</a>
+						<a href="prices.html">Цены</a>
+						<a href="articles.html">Статьи</a>
 						<a href="contacts.html">Контакты</a>
 					</nav>
 
@@ -226,8 +226,8 @@
 				<nav class="foo_nav_wrapper col-xs-12 col-sm-7 col-md-6">
 					<a href="index.html">Главная</a>
 					<a href="catalog.html">Каталог</a>
-					<a href="#">Цены</a>
-					<a href="#">Статьи</a>
+					<a href="prices.html">Цены</a>
+					<a href="articles.html">Статьи</a>
 					<a href="contacts.html">Контакты</a>
 				</nav>
 
