--- a/article_page.html
+++ b/article_page.html
@@ -53,151 +53,103 @@
 
 	<div class="body_wrapper">
 
-		<div class="head_wrapper_innerpage">
+		<header class="header_black">
+			<div class="container">
 
-			<header">
-				<div class="container">
-
-					<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
-						<a href="index.html" class="logo">
-						</a>
-					</div>
-
-					<!-- mob menu -->
-					<div class="mob_menu_button_wrapper">
-						<a href="#" class="mob_menu_button">Меню</a>
-					</div>
-
-					<a href="#" class="close_icon">
-						<img src="../img/ic_close.svg" alt=""/>
+				<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
+					<a href="index.html" class="logo">
 					</a>
-					<!-- mob menu end -->
+				</div>
 
-					<nav class="head_nav col-sm-4 col-md-3">
-						<a href="index.html">Главная</a>
-						<a href="catalog.html">Каталог</a>
-						<a href="prices.html">Цены</a>
-						<a href="articles.html">Статьи</a>
-						<a href="contacts.html">Контакты</a>
-					</nav>
+				<!-- mob menu -->
+				<div class="mob_menu_button_wrapper">
+					<a href="#" class="mob_menu_button">Меню</a>
+				</div>
 
-					<div class="phone_wrapper col-md-3">
+				<a href="#" class="close_icon">
+					<img src="../img/ic_close.svg" alt=""/>
+				</a>
+				<!-- mob menu end -->
 
-						<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
+				<nav class="head_nav col-sm-4 col-md-3">
+					<a href="index.html">Главная</a>
+					<a href="catalog.html">Каталог</a>
+					<a href="prices.html">Цены</a>
+					<a href="articles.html">Статьи</a>
+					<a href="contacts.html">Контакты</a>
+				</nav>
 
-						<ul class="phones">
-							<li>(097) 823 32 39</li>
-							<li>(097) 823 32 39</li>
-						</ul>
+				<div class="phone_wrapper col-md-3">
 
-					</div>
+					<img src="../img/ic_cicle_phone_white.svg" class="ic_phone">
 
-					<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
+					<ul class="phones">
+						<li>(097) 823 32 39</li>
+						<li>(097) 823 32 39</li>
+					</ul>
 
-						<input type="button" class="btn_cta" value="Заказать консультацию">
+				</div>
 
+				<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
+
+					<input type="button" class="btn_cta" value="Заказать консультацию">
+
+				</div>
+
+			</div>
+		</header>
+
+		<div class="article_content_wrapper_ap">
+
+			<img class="article_img_ap" src="../img/articles/article_img@2x.png">
+
+			<div class="article_content_ap">
+				<span class="article_readtime_ap">9 минут для чтения</span>
+				<h1>Как выбрать межкомнатную дверь?</h1>
+				<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом жилье. И тогда возникает вопрос: как выбрать межкомнатные двери?<br>
+					В принципе, ничего сверхсложного в этом нет, особенно, если воспользоваться нашим понятным и подробным алгоритмом. Не обязательно быть специалистом или изучать тонны литературы - достаточно понимать основные моменты: из каких материалов обычно изготавливают двери, какие существуют виды, в чем их достоинства и недостатки.<br>
+					Межкомнатная дверь, при правильном подходе, может зрительно расширить помещение, сделать его более уютным, подчеркнуть общий стиль интерьера или даже стать изюминкой, помочь сэкономить пространство. Все зависит от фантазии, бюджета и ассортимента места, где покупаются двери. И, конечно, от мастерства установщиков - все должно не только выглядеть, но и выполнять свои функции идеально.
+				</p>
+			</div>
+
+		</div>
+
+		<section class="similar_articles_wrapper">
+
+			<h3>Похожие статьи</h3>
+
+			<div class="content_articles_wrapper">
+
+				<div class="article_wrapper">
+
+					<a href="article_page.html">
+						<img class="article_img" src="../img/articles/article_img@2x.png">
+						<div class="article_content_wrapper">
+							<div class="article_content">
+								<span class="article_readtime">9 минут для чтения</span>
+								<h3>Как выбрать межкомнатную дверь?</h3>
+								<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+								</p>
+							</div>
+						</div>
+					</a>
+
+				</div>
+				<div class="article_wrapper">
+
+					<a href="article_page.html">
+						<img class="article_img" src="../img/articles/article_img@2x.png">
+					</a>
+					<div class="article_content_wrapper">
+						<div class="article_content">
+							<span class="article_readtime">9 минут для чтения</span>
+							<h3>Как выбрать межкомнатную дверь?</h3>
+							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+							</p>
+						</div>
 					</div>
 
 				</div>
-			</header>
-
-			<div class="head_content_wrapper_h1">
-
-				<h1 class="header_title">Статьи</h1>
-
-			</div>
-		</div>
-
-		<section class="content_articles_wrapper">
-
-			<div class="article_wrapper">
-
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    	<div class="article_content_wrapper">
-		        <div class="article_content">
-		          <span class="article_readtime">9 минут для чтения</span>
-		          <h3>Как выбрать межкомнатную дверь?</h3>
-		          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-							</p>
-		        </div>
-			    </div>
-				</a>
-
-			</div>
-			<div class="article_wrapper">
-
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
-
-			</div>
-			<div class="article_wrapper">
-
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
-
-			</div>
-			<div class="article_wrapper">
-
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
-
-			</div>
-			<div class="article_wrapper">
-
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
-
-			</div>
-			<div class="article_wrapper">
-
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
 
 			</div>
 
