--- a/app/articles.html
+++ b/app/articles.html
@@ -55,7 +55,7 @@
 
 		<div class="head_wrapper_innerpage">
 
-			<header">
+			<header>
 				<div class="container">
 
 					<div class="logo_wrapper col-xs-6 col-sm-4 col-md-3">
@@ -110,96 +110,114 @@
 
 		<section class="content_articles_wrapper">
 
-			<div class="article_wrapper">
+			<a href="article_page.html">
+				<div class="article_wrapper">
 
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    	<div class="article_content_wrapper">
-		        <div class="article_content">
-		          <span class="article_readtime">9 минут для чтения</span>
-		          <h3>Как выбрать межкомнатную дверь?</h3>
-		          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+						<div class="article_img_wrapper">
+							<img class="article_img" src="../img/articles/article_img@2x.png">
+						</div>
+
+					<div class="article_content_wrapper">
+						<div class="article_content">
+
+							<span class="article_readtime">9 минут для чтения</span>
+							<h3>Как выбрать межкомнатную дверь?</h3>
+							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
 							</p>
-		        </div>
-			    </div>
-				</a>
 
-			</div>
-			<div class="article_wrapper">
+						</div>
+					</div>
+	      </div></a>
+			<a href="article_page.html">
+				<div class="article_wrapper">
 
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
+						<div class="article_img_wrapper">
+							<img class="article_img" src="../img/articles/article_img@2x.png">
+						</div>
 
-			</div>
-			<div class="article_wrapper">
+					<div class="article_content_wrapper">
+						<div class="article_content">
 
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
+							<span class="article_readtime">9 минут для чтения</span>
+							<h3>Как выбрать межкомнатную дверь?</h3>
+							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+							</p>
 
-			</div>
-			<div class="article_wrapper">
+						</div>
+					</div>
+	      </div></a>
+			<a href="article_page.html">
+				<div class="article_wrapper">
 
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
+						<div class="article_img_wrapper">
+							<img class="article_img" src="../img/articles/article_img@2x.png">
+						</div>
 
-			</div>
-			<div class="article_wrapper">
+					<div class="article_content_wrapper">
+						<div class="article_content">
 
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
+							<span class="article_readtime">9 минут для чтения</span>
+							<h3>Как выбрать межкомнатную дверь?</h3>
+							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+							</p>
 
-			</div>
-			<div class="article_wrapper">
+						</div>
+					</div>
+	      </div></a>
+			<a href="article_page.html">
+				<div class="article_wrapper">
 
-				<a href="article_page.html">
-	        <img class="article_img" src="../img/articles/article_img@2x.png">
-		    </a>
-		    <div class="article_content_wrapper">
-	        <div class="article_content">
-	          <span class="article_readtime">9 минут для чтения</span>
-	          <h3>Как выбрать межкомнатную дверь?</h3>
-	          <p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
-						</p>
-	        </div>
-		    </div>
+						<div class="article_img_wrapper">
+							<img class="article_img" src="../img/articles/article_img@2x.png">
+						</div>
 
-			</div>
+					<div class="article_content_wrapper">
+						<div class="article_content">
+
+							<span class="article_readtime">9 минут для чтения</span>
+							<h3>Как выбрать межкомнатную дверь?</h3>
+							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+							</p>
+
+						</div>
+					</div>
+	      </div></a>
+			<a href="article_page.html">
+				<div class="article_wrapper">
+
+						<div class="article_img_wrapper">
+							<img class="article_img" src="../img/articles/article_img@2x.png">
+						</div>
+
+					<div class="article_content_wrapper">
+						<div class="article_content">
+
+							<span class="article_readtime">9 минут для чтения</span>
+							<h3>Как выбрать межкомнатную дверь?</h3>
+							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+							</p>
+
+						</div>
+					</div>
+	      </div></a>
+			<a href="article_page.html">
+				<div class="article_wrapper">
+
+						<div class="article_img_wrapper">
+							<img class="article_img" src="../img/articles/article_img@2x.png">
+						</div>
+
+					<div class="article_content_wrapper">
+						<div class="article_content">
+
+							<span class="article_readtime">9 минут для чтения</span>
+							<h3>Как выбрать межкомнатную дверь?</h3>
+							<p>Межкомнатные двери - столь привычный элемент любой квартиры или дома, что мы обычно не обращаем на них внимания ровно до тех пор, пока не приходит время заменить двери или установить их в новом…
+							</p>
+
+						</div>
+					</div>
+	      </div></a>
 
 		</section>
 
