added magnific pop up

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,21 @@
 </head>
 <body>
 
+	<div class="form_wrapper_pop mfp-hide">
+		<div class="form_pop">
+			<form action="">
+
+				<h3>Закажи консультацию нашего мастера прямо сейчас</h3>
+				<p>Получи скидку 5% на первый заказ</p>
+
+				<input type="text" class="name_pop" name="name" placeholder="Ваше имя">
+				<input type="text" class="phone_pop" name="phone" placeholder="Ваш телефон">
+				<input type="submit" class="submit_pop" value="Перезвоните мне">
+
+			</form>
+		</div>
+	</div>
+
 	<div class="body_wrapper">
 
 		<div class="head_wrapper_lp">
@@ -97,7 +112,7 @@
 
 					<div class="btn_cta_wrapper hidden-xs col-sm-4 col-md-3">
 
-						<input type="button" class="btn_cta" value="Заказать консультацию">
+						<input type="button" href=".form_wrapper_pop" class="btn_cta" value="Заказать консультацию">
 
 					</div>
 
@@ -516,6 +531,7 @@
 		</footer>
 
 	</div>
+
 	<script>var scr = {"scripts":[
 		{"src" : "js/libs.min.js", "async" : false},
 		{"src" : "js/common.js", "async" : false}
