responsive pop up, added mail.php

--- a/app/index.html
+++ b/app/index.html
@@ -56,13 +56,13 @@
 
 	<div class="form_wrapper_pop mfp-hide">
 		<div class="form_pop">
-			<form action="">
+			<form action="" autocomplete="off" id="form">
 
 				<h3>Закажи консультацию нашего мастера прямо сейчас</h3>
 				<p>Получи скидку 5% на первый заказ</p>
 
-				<input type="text" class="name_pop" name="name" placeholder="Ваше имя">
-				<input type="text" class="phone_pop" name="phone" placeholder="Ваш телефон">
+				<input type="text" class="name_pop" name="name" placeholder="Ваше имя" required>
+				<input type="text" class="phone_pop" name="phone" placeholder="Ваш телефон" required>
 				<input type="submit" class="submit_pop" value="Перезвоните мне">
 
 			</form>
@@ -414,7 +414,7 @@
 					<p>Получи скидку 5% на первый заказ</p>
 
 					<div class="form_wrapper">
-						<form action="">
+						<form action="" autocomplete="off"§>
 
 					    <input type="text" class="name" name="name" placeholder="Ваше имя">
 
