--- a/app/product_page.html
+++ b/app/product_page.html
@@ -51,6 +51,21 @@
 </head>
 <body>
 
+	<div class="form_wrapper_pop mfp-hide">
+		<div class="form_pop">
+			<form action="" autocomplete="off" id="form">
+
+				<h3>Закажи консультацию нашего мастера прямо сейчас</h3>
+				<p>Получи скидку 5% на первый заказ</p>
+
+				<input type="text" class="name_pop" name="name" placeholder="Ваше имя" required>
+				<input type="text" class="phone_pop" name="phone" placeholder="Ваш телефон" required>
+				<input type="submit" class="submit_pop" value="Перезвоните мне">
+
+			</form>
+		</div>
+	</div>
+	
 	<div class="body_wrapper">
 
 		<div class="head_wrapper_pp">
@@ -126,6 +141,8 @@
 						</p>
 
 					</div>
+
+					<input type="button" href=".form_wrapper_pop" class="btn_cta_content" value="Заказать консультацию">
 
 					<p class="disc">
 						В цену входит:<br>
