fixes for prices

--- a/app/prices.html
+++ b/app/prices.html
@@ -141,11 +141,11 @@
 					Ясень - от 6000 грн./1 шт<br><br></h3>
 
 					Отдельно оплачивается:<br>
-					- Доставка: от 1000 грн. *<br>
+					- Доставка: от 1000 грн.*<br>
 					- Установка: 10% от стоимости заказа<br>
 					- Стекло, фурнитура на выбор заказчика<br><br>
 					<span class="tiny_text">* Заказ свыше 15000 грн доставляется бесплатно</span><br>
-
+					<br><br><br><br>
 					В цену входит:<br>
 					- Дверное полотно<br>
 					- Коробка до 100мм<br>
@@ -156,7 +156,7 @@
 					- Одна дверь:<br>
 					от 10 до 20 рабочих дней<br>
 					- Комплект на квартиру (5-7 дверей):<br>
-					от 30 рабочих дней<br>
+					от 30 рабочих дней<br><br>
 				</div>
 			</div>
 		</section>
@@ -170,7 +170,7 @@
 
 				<div class="content_prices col-md-8">
 					<h3>Кровати<br><br></h3>
-					<h3>Сосна - от 10 000 грн.
+					<h3>Сосна - от 10 000 грн.<br>
 					Ясень - от 13000 грн.<br><br></h3>
 
 					В цену входит:<br>
@@ -180,7 +180,7 @@
 					- Покрытие тонировки в любой выбранной цвет,грунт+лак<br><br>
 
 					Отдельно оплачивается:<br>
-					- Доставка: от 1000 грн. (Киев) *<br>
+					- Доставка: от 1000 грн. (Киев)*<br>
 					- Установка: 10% от стоимости заказа<br>
 					- Стекло, фурнитура на выбор заказчика<br><br>
 
@@ -189,8 +189,8 @@
 					- Комплект на квартиру (5-7 дверей): от 30 рабочих дней<br>
 
 					<h3>Кухни<br><br></h3>
-					<h3>Сосна - от 8000 грн. /м. пог. *
-					Ясень - от 12000 грн./м.пог. *<br><br></h3>
+					<h3>Сосна - от 8000 грн. /м. пог.*<br>
+					Ясень - от 12000 грн./м.пог.*<br><br></h3>
 
 					В цену входит:<br>
 					- изготовление деревянного каркаса<br>
@@ -201,7 +201,7 @@
 					Отдельно оплачивается:<br>
 					- выезд мастера, замер, консультация -
 					300 грн. (Киев)<br>
-					- Доставка: от 1000 грн. (Киев) *<br>
+					- Доставка: от 1000 грн. (Киев)*<br>
 					- Монтаж (1 секция) от 500 грн (10% от стоимости заказа)<br>
 					- стекло, фурнитура по выбору заказчика<br>
 					- стекло, фурнитура по выбору заказчика<br>
@@ -217,7 +217,7 @@
 				</div>
 
 				<div class="content_prices col-md-8">
-					<h3>Сосна - 2500 грн./ступеня
+					<h3>Сосна - 2500 грн./ступеня<br>
 					Ясень - 3500 грн./ступеня<br><br></h3>
 
 					Поручень:<br>
