added js for tabs

--- a/app/catalog.html
+++ b/app/catalog.html
@@ -133,8 +133,8 @@
 		<div class="tabs_catalog_scroll">
 			<div class="tabs_catalog">
 
-				<div class="tab_wrapper">
-					<div class="tab tab_selected">
+				<div class="tab_wrapper current" data-tab="tab-1">
+					<div class="tab">
 
 						<div class="tab_icons_wrapper">
 							<img src="../img/ic_doors.svg" class="tab_icons">
@@ -150,7 +150,7 @@
 					</div>
 				</div>
 
-				<div class="tab_wrapper">
+				<div class="tab_wrapper" data-tab="tab-2">
 					<div class="tab">
 
 						<div class="tab_icons_wrapper">
@@ -167,7 +167,7 @@
 					</div>
 				</div>
 
-				<div class="tab_wrapper">
+				<div class="tab_wrapper" data-tab="tab-3">
 					<div class="tab">
 
 						<div class="tab_icons_wrapper">
@@ -187,7 +187,7 @@
 			</div>
 		</div>
 
-		<section class="catalog_gallery container">
+		<section class="catalog_gallery gallery_selected container" id="tab-1">
 
 			<div class="g_img_wrapper">
 			  <a href="product_page.html">
@@ -195,14 +195,42 @@
 			  </a>
 			  <div class="g_title">Двери 1</div>
 			</div>
-
 			<div class="g_img_wrapper">
 			  <a href="product_page.html">
 			    <img class="g_img" src="../img/gallery/g_small_2.jpg" alt="Двери 1" width="300" height="300">
 			  </a>
 			  <div class="g_title">Двери 1</div>
 			</div>
-
+			<div class="g_img_wrapper">
+			  <a href="product_page.html">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+			  <a href="product_page.html">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+			  <a href="product_page.html">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+			  <a href="product_page.html">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+			  <a href="product_page.html">
+			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
+			  </a>
+			  <div class="g_title">Двери 1</div>
+			</div>
 			<div class="g_img_wrapper">
 			  <a href="product_page.html">
 			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
@@ -210,39 +238,110 @@
 			  <div class="g_title">Двери 1</div>
 			</div>
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
+		</section>
+
+		<section class="catalog_gallery container" id="tab-2">
 
 			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_kitchen.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_kitchen.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_kitchen.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_kitchen.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_kitchen.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_kitchen.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_kitchen.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_kitchen.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
 			</div>
 
-			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
-			</div>
+		</section>
+
+		<section class="catalog_gallery container" id="tab-3">
 
 			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_stairs.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
 			</div>
-
 			<div class="g_img_wrapper">
-			  <a href="product_page.html">
-			    <img class="g_img" src="../img/gallery/g_small_3.jpg" alt="Двери 1" width="300" height="300">
-			  </a>
-			  <div class="g_title">Двери 1</div>
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_stairs.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_stairs.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_stairs.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_stairs.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_stairs.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_stairs.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
+			</div>
+			<div class="g_img_wrapper">
+				<a href="product_page.html">
+					<img class="g_img" src="../img/gallery/g_big_stairs.png" alt="Двери 1" width="300" height="300">
+				</a>
+				<div class="g_title">Двери 1</div>
 			</div>
 
 		</section>
