--- a/app/prices.html
+++ b/app/prices.html
@@ -124,7 +124,7 @@
 				<h1 class="header_title">Цены</h1>
 
 				<p class="disc_head_content">
-					Ниже приведены ориентировочные цены на изделия из дерева</p>
+					Ниже приведены ориентировочные цены<br> на изделия из дерева</p>
 
 			</div>
 		</div>
@@ -145,7 +145,8 @@
 					- Установка: 10% от стоимости заказа<br>
 					- Стекло, фурнитура на выбор заказчика<br><br>
 					<span class="tiny_text">* Заказ свыше 15000 грн доставляется бесплатно</span><br>
-					<br><br><br><br>
+					<br>
+					<hr class="divider"></hr>
 					В цену входит:<br>
 					- Дверное полотно<br>
 					- Коробка до 100мм<br>
@@ -187,7 +188,7 @@
 					Срок изготовления:<br>
 					- Одна дверь: 10-20 рабочих дней<br>
 					- Комплект на квартиру (5-7 дверей): от 30 рабочих дней<br>
-
+					<hr class="divider_kitchen"></hr>
 					<h3>Кухни<br><br></h3>
 					<h3>Сосна - от 8000 грн. /м. пог.*<br>
 					Ясень - от 12000 грн./м.пог.*<br><br></h3>
@@ -229,7 +230,7 @@
 					Столбы: <br>
 					- ясень: от 700 грн./шт.<br>
 					- сосна: от 500 грн./шт.<br><br>
-
+					<hr class="divider"></hr>
 					В цену входит:<br>
 					- выполнение проекта лестницы<br>
 					- изготовление всех частей и деталей <br>
