--- a/app/index.html
+++ b/app/index.html
@@ -414,7 +414,7 @@
 					<p>Получи скидку 5% на первый заказ</p>
 
 					<div class="form_wrapper">
-						<form action="" autocomplete="off"§>
+						<form action="" autocomplete="off">
 
 					    <input type="text" class="name" name="name" placeholder="Ваше имя" required>
 
