--- a/app/index.html
+++ b/app/index.html
@@ -429,23 +429,23 @@
 
 							<div class="review_item col-md-4">
 								<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-								<h3>Сергей</h3>
+								<h3>Надя</h3>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+									Заказывали кухню из ясеня в стиле модерн, остались довольны. Качество выполненных работ приятно впечатлило, советуем эту компанию своим знакомым								</p>
 								</p>
 							</div>
 							<div class="review_item hidden-xs hidden-sm col-md-4">
 								<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-								<h3>Сергей</h3>
+								<h3>Григорий</h3>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+									Двери прекрасно служат уже 10 лет, уверен прослужат еще также, если не дольше). Обслуживание: быстро, качественно, недорого (как для натурального дерева)
 								</p>
 							</div>
 							<div class="review_item hidden-xs hidden-sm col-md-4">
 								<img src="http://1.gravatar.com/avatar/1b17d4931f914ee75c7f5e5dc7b17734?s=80&d=identicon&r=g" alt="" />
-								<h3>Сергей</h3>
+								<h3>Віталіна</h3>
 								<p>
-									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+									Для нас з чоловіком, найважливішим фактором вибору меблів в дитячу кімнату – екологічно чисті матеріали. Саме тому, без роздумів обирали меблі із натурального дерева. Купили в «Wooddoors», дякуємо за обслуговування та якість								</p>
 								</p>
 							</div>
 
